[package]
name = "curerr"
version = "1.0.7"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/curerr"
repository = "https://github.com/CURVoid/curerr.git"
homepage = "https://github.com/CURVoid/curerr.git"
keywords = ["error", "curerr", "handling"]
description = "Rust crate for easy error handling"